# lorentz-prime-predictor

./: .gitignore  API.md  BENCHMARK_PROTOCOL.md  CLAIMS.md  FORMULA.md  METHOD.md  README.md  REFERENCES.md  SCALING_INTERPRETATION.md  SCALING_RESULTS.md  VALIDATION_STATUS.md  entities.json  pyproject.toml
benchmarks/: band_10_0.json  band_10_1.json  band_10_10.json  band_10_11.json  band_10_12.json  band_10_13.json  band_10_14.json  band_10_15.json  band_10_16.json  band_10_17.json  band_10_18.json  band_10_19.json  band_10_2.json  band_10_20.json  band_10_21.json  band_10_22.json  band_10_23.json  band_10_24.json  band_10_3.json  band_10_4.json  band_10_5.json  band_10_6.json  band_10_7.json  band_10_8.json  band_10_9.json  contract_grid.csv  contract_grid.md  off_lattice_benchmark.csv  off_lattice_benchmark.md  off_lattice_benchmark_summary.json  summary_bands.json
data/: KNOWN_PRIMES.md  held_out_exact_primes_1e13_1e14.csv  held_out_exact_primes_1e13_1e14_manifest.json  held_out_exact_primes_1e15_1e16.csv  held_out_exact_primes_1e15_1e16_manifest.json  held_out_exact_primes_1e4_1e12.csv  held_out_exact_primes_1e4_1e12_manifest.json  held_out_z5d_primes_1e17_1e18.csv  held_out_z5d_primes_1e17_1e18_manifest.json
docs/: API.md  ASYMP_C_BACKBONE_RATIO_K.md  ASYMP_C_BACKBONE_RATIO_K_CLAUDE.md  ASYMP_C_BACKBONE_RATIO_K_GROK.md  BENCHMARK_PROTOCOL.md  CANDIDATE_CATEGORIES.md  CLAIMS.md  FORMULA.md  KAPPA_DERIVATION_PROBLEM_STATEMENT.md  METHOD.md  ORIGIN.md  REFERENCES.md  REVIEW_FINDINGS.md  SCALING_INTERPRETATION.md  SCALING_RESULTS.md  VALIDATION_STATUS.md
(+147 files in other folders)
